# sampleproject

./: pyproject.toml
.github/workflows/: deploy-to-azure-artifacts.yml
src/example/: file.py
